docker/yorkie-shard-cluster-docker/envoy-ring-hash-router.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: yorkie_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: yorkie_ring_hash_routes
                  virtual_hosts:
                    - name: yorkie_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: yorkie_service
                            hash_policy:
                              header:
                                header_name: x-api-key
                            # https://github.com/grpc/grpc-web/issues/361
                            max_stream_duration:
                              grpc_timeout_header_max: 0s
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization,x-api-key
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message, grpc-status-details-bin
                http_filters:
                  - name: envoy.filters.http.grpc_web
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
    - name: admin_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 9090 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: yorkie_ring_hash_routes
                  virtual_hosts:
                    - name: yorkie_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: admin_service
                            # https://github.com/grpc/grpc-web/issues/361
                            max_stream_duration:
                              grpc_timeout_header_max: 0s
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization,x-api-key
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message, grpc-status-details-bin
                http_filters:
                  - name: envoy.filters.http.grpc_web
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
  clusters:
    - name: yorkie_service
      connect_timeout: 0.25s
      type: strict_dns
      http2_protocol_options: {}
      lb_policy: ring_hash
      ring_hash_lb_config:
        minimum_ring_size: 125
      load_assignment:
        cluster_name: yorkie_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 11101
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 11201
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 11301
    - name: admin_service
      connect_timeout: 0.25s
      type: strict_dns
      http2_protocol_options: {}
      lb_policy: ring_hash
      ring_hash_lb_config:
        minimum_ring_size: 125
      load_assignment:
        cluster_name: admin_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 11103
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 11203
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 11303
